--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,18 @@
 name : Alex Wang
-markdown: kramdown
+
+# markdown
+# markdown: kramdown
+# highlighter: rouge
+
+# kramdown:
+#   input: GFM
+#   hard_wrap: false
+#   auto_ids: true
+#   footnote_nr: 1
+#   entity_output: as_char
+#   toc_levels: 1..6
+#   smart_quotes: lsquo,rsquo,ldquo,rdquo
+#   enable_coderay: false
+#   syntax_highlighter: rouge
+#   syntax_highlighter_opts:
+#     tab_width: 4
